--- a/mucgpt-frontend/src/pages/layout/Layout.module.css
+++ b/mucgpt-frontend/src/pages/layout/Layout.module.css
@@ -116,7 +116,6 @@
     left: 0;
     width: 100%;
     background-color: var(--onSurface);
-    z-index: 9;
     padding: 8px 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
